--- a/Program.html
+++ b/Program.html
@@ -20,8 +20,17 @@
             </div>
 
         </div> -->
-        <img src="ICPR_logo.jpg" class="img-responsive" alt="Cinque Terre"> 
-
+        <div id="head">
+                <hr />
+            <h1 style="text-align:center"><b>The Second International Workshop on 
+             <br>    Deep Learning for Pattern Recognition (DLPR2018)</b></h1>
+            
+            <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+            text-align:center">
+             <i>To be held in conjunction with the 24th International Conference on Pattern Recognition ICPR 2018, August 20th,
+                    2018. Beijing, China</i>   </p>
+            <img src="DLPR_logo2.jpg" class="img-responsive" alt="Cinque Terre"> 
+        </div>
 
         <div class="row">
             <div class="span6 offset2">
@@ -40,15 +49,15 @@
                     <li>
                         <a href="Submission.html">Submission</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="Registration.html">Registration</a>
-                    </li>
+                    </li> -->
                     <li class="active">
                         <a href="Program.html">Program</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="Contact.html">Contact</a>
-                    </li>
+                    </li> -->
                     <br />
                 </ul>
             </div>
@@ -56,8 +65,8 @@
 
         <div class="row">
             <div class="span12">
-                    <h2><span style="font-family: verdana,geneva,sans-serif">Workshop Program</span></h2>
-                    <p><span style="font-size: 16px"><span style="font-family: verdana,geneva,sans-serif">TBA.&nbsp;</span></span></p>
+                    <h2 style="color:darkblue"><span>Workshop Program</span></h2>
+                    <p><span style="font-size: 16px"><span>TBA.&nbsp;</span></span></p>
             </div>
         </div>
     </div>
