--- a/Submission.html
+++ b/Submission.html
@@ -20,8 +20,17 @@
             </div>
 
         </div> -->
-        <img src="ICPR_logo.jpg" class="img-responsive" alt="Cinque Terre"> 
-
+        <div id="head">
+                <hr />
+            <h1 style="text-align:center"><b>The Second International Workshop on 
+             <br>    Deep Learning for Pattern Recognition (DLPR2018)</b></h1>
+            
+            <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+            text-align:center">
+             <i>To be held in conjunction with the 24th International Conference on Pattern Recognition ICPR 2018, August 20th,
+                    2018. Beijing, China</i>   </p>
+            <img src="DLPR_logo2.jpg" class="img-responsive" alt="Cinque Terre"> 
+        </div>
 
         <div class="row">
             <div class="span6 offset2">
@@ -40,15 +49,15 @@
                     <li class="active">
                         <a href="Submission.html">Submission</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="Registration.html">Registration</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="Program.html">Program</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="Contact.html">Contact</a>
-                    </li>
+                    </li> -->
                     <br />
                 </ul>
             </div>
@@ -56,7 +65,16 @@
 
         <div class="row">
             <div class="span12">
-                    <h2><span style="font-family: verdana,geneva,sans-serif">Paper Submission</span></h2>
+                    <h2 style="color:darkblue"><span >Paper Submission</span></h2>
+                    <p>For submission, author should refer to the formatting instructions on 
+                        <a href="http://www.springer.com/cn/computer-science/lncs/conference-proceedings-guidelines">Springer LNCS/LNAI</a>.
+                        The length of paper is limitted to <strong style="color:red">NUM</strong> pages.
+
+                    </p>
+                    <p>The submitted papers should be original research works that have neither been published nor submitted for publication elsewhere.</p>
+                    <p>
+                        The paper need to be submitted via <a href="#">site</a>.
+                    </p>
             </div>
         </div>
     </div>
