--- a/Important Dates.html
+++ b/Important Dates.html
@@ -70,12 +70,8 @@
                     <p><span style="font-size: 16px"><span>Paper Submissions: <strong>June 1, 2018</strong> </span></span> </p>
 
                     <p><span style="font-size: 16px"><span>Author Notification: <strong>June 30, 2018</strong> </span></span></p>
-                    <br>
                     <p>Workshop Date: <strong>August 20, 2018</strong></p>
-                    <br>
-                    <p>
-                        Camera ready dealine: <strong>October 1, 2018</strong>
-                    </p>
+                    <p>Camera ready dealine: <strong>October 1, 2018</strong></p>
             </div>
         </div>
     </div>
