--- a/Important Dates.html
+++ b/Important Dates.html
@@ -66,12 +66,12 @@
         <div class="row">
             <div class="span12">
                     <h2 style="color:darkblue"><span>Important Dates</span></h2>
-
-                    <p><span style="font-size: 16px"><span>Paper Submissions: <strong>June 1, 2018</strong> </span></span> </p>
-
-                    <p><span style="font-size: 16px"><span>Author Notification: <strong>June 30, 2018</strong> </span></span></p>
-                    <p>Workshop Date: <strong>August 20, 2018</strong></p>
-                    <p>Camera ready dealine: <strong>October 1, 2018</strong></p>
+                <ul class="">
+                    <li>Paper Submissions: <strong>June 1, 2018</strong></li>
+                    <li>Author Notification: <strong>June 30, 2018</strong></li>
+                    <li>Workshop Date: <strong>August 20, 2018</strong></li>
+                    <li>Camera ready dealine: <strong>October 1, 2018</strong></li>
+                </ul>
             </div>
         </div>
     </div>
