--- a/Organizers.html
+++ b/Organizers.html
@@ -65,7 +65,8 @@
 
         <div class="row">
             <div class="span12">
-                    <h2 style="color:darkblue"><span>Organizers</span></h2>
+                    <h2 style="color:darkblue"><span>Organization Committee</span></h2>
+                <br>
 
                     <ul>
                         <li><span style="font-size: 16px"><span>Xiang Bai,             Huazhong University Science and Technology</span></span><br>
