--- a/Contact.html
+++ b/Contact.html
@@ -20,22 +20,34 @@
             </div>
 
         </div> -->
-        <img src="ICPR_logo.jpg" class="img-responsive" alt="Cinque Terre"> 
+        <hr />
+        <h1 style="text-align:center"><b>The Second International Workshop on 
+         <br>    Deep Learning for Pattern Recognition (DLPR2018)</b></h1>
+        
+        <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+        text-align:center">
+         <i>To be held in conjunction with the 24th International Conference on Pattern Recognition ICPR 2018, August 20th,
+                2018. Beijing, China</i>   </p>
+        <img src="DLPR_logo2.jpg" class="img-responsive" alt="Cinque Terre"> 
+        <!-- <img src="ICPR_logo.jpg" class="img-responsive" alt="Cinque Terre">  -->
 
 
         <div class="row">
             <div class="span6 offset2">
                 <ul class="nav nav-tabs">
                     <li>
-                        <a href="index.html">Call For Papers</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <!-- <li> <a href="dataset.html">Dataset</a></li> -->
                     <!-- <li><a href="tasks.html">Tasks</a></li> -->
                     <li>
-                        <a href="Organizers.html">Organizers</a>
+                        <a href="Organizers.html">Organization Committee</a>
                     </li>
                     <li>
                         <a href="Important Dates.html">Important Dates</a>
+                    </li>
+                    <li>
+                        <a href="Invited Speakers.html">Invited Speakers</a>
                     </li>
                     <li>
                         <a href="Submission.html">Submission</a>
@@ -56,7 +68,9 @@
 
         <div class="row">
             <div class="span12">
-             
+                <h2>Contact Us</h2>
+                <p>Professor Xiang Bai</p>
+                <p>xbai@hust.edu.cn</p>
             </div>
         </div>
     </div>
