--- a/Important Dates.html
+++ b/Important Dates.html
@@ -36,15 +36,18 @@
             <div class="span6 offset2">
                 <ul class="nav nav-tabs">
                     <li>
-                        <a href="index.html">Call For Papers</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <!-- <li> <a href="dataset.html">Dataset</a></li> -->
                     <!-- <li><a href="tasks.html">Tasks</a></li> -->
                     <li>
-                        <a href="Organizers.html">Organizers</a>
+                        <a href="Organizers.html">Organization Committee</a>
                     </li>
                     <li class="active">
                         <a href="Important Dates.html">Important Dates</a>
+                    </li>
+                    <li>
+                        <a href="Invited Speakers.html">Invited Speakers</a>
                     </li>
                     <li>
                         <a href="Submission.html">Submission</a>
@@ -55,9 +58,9 @@
                     <li>
                         <a href="Program.html">Program</a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a href="Contact.html">Contact</a>
-                    </li> -->
+                    </li>
                     <br />
                 </ul>
             </div>
