--- a/Submission.html
+++ b/Submission.html
@@ -36,15 +36,18 @@
             <div class="span6 offset2">
                 <ul class="nav nav-tabs">
                     <li>
-                        <a href="index.html">Call For Papers</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <!-- <li> <a href="dataset.html">Dataset</a></li> -->
                     <!-- <li><a href="tasks.html">Tasks</a></li> -->
                     <li>
-                        <a href="Organizers.html">Organizers</a>
+                        <a href="Organizers.html">Organization Committee</a>
                     </li>
                     <li>
                         <a href="Important Dates.html">Important Dates</a>
+                    </li>
+                    <li>
+                        <a href="Invited Speakers.html">Invited Speakers</a>
                     </li>
                     <li class="active">
                         <a href="Submission.html">Submission</a>
@@ -55,9 +58,9 @@
                     <li>
                         <a href="Program.html">Program</a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a href="Contact.html">Contact</a>
-                    </li> -->
+                    </li>
                     <br />
                 </ul>
             </div>
@@ -66,7 +69,7 @@
         <div class="row">
             <div class="span12">
                     <h2 style="color:darkblue"><span >Paper Submission</span></h2>
-                    <p>For submission, author should refer to the formatting instructions on 
+                    <!-- <p>For submission, author should refer to the formatting instructions on 
                         <a href="http://www.springer.com/cn/computer-science/lncs/conference-proceedings-guidelines">Springer LNCS/LNAI</a>.
                         The length of paper is limitted to <strong style="color:red">NUM</strong> pages.
 
@@ -74,8 +77,19 @@
                     <p>The submitted papers should be original research works that have neither been published nor submitted for publication elsewhere.</p>
                     <p>
                         The paper need to be submitted via <a href="#">site</a>.
+                    </p> -->
+                    <p>
+                        Paper Submission must be written in English, with length between four and six double column pages adhering to the ICPR conference 
+                        submission guidelines. The templates for 6 pages length Paper (A4 format) in Word or Latex can be downloaded from 
+                        <a href="http://www.icpr2018.org/index.php?m=content&c=index&a=lists&catid=15">Guidelines for Submission</a> on ICPR website.
                     </p>
-            </div>
+                    <p>
+                        <strong>Submission is handled through the EasyChair system avaiable from <a href="#">here</a> </strong>. Reviewing will be single-blind. 
+                    In submitting a paper the authors acknowledge that no paper substantially similar in content has been or will be submitted elsewhere during 
+                    the DLPR18 review period. Accepted papers that were presented at the workshop will be published via IEEE Xplore. Some of accepted papers will be
+                     invited to the Journal Special Issues of Pattern Recognition Letters (Elsevier) and Frontier of Computer Science (Springer).
+                    </p>
+                        </div>
         </div>
     </div>
     <!-- <br>
