--- a/Invited Speakers.html
+++ b/Invited Speakers.html
@@ -20,17 +20,17 @@
             </div>
 
         </div> -->
-        <div id="head">
-                <hr />
-            <h1 style="text-align:center"><b>The Second International Workshop on 
-             <br>    Deep Learning for Pattern Recognition (DLPR2018)</b></h1>
-            
-            <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-            text-align:center">
-             <i>To be held in conjunction with the 24th International Conference on Pattern Recognition ICPR 2018, August 20th,
-                    2018. Beijing, China</i>   </p>
-            <img src="DLPR_logo2.jpg" class="img-responsive" alt="Cinque Terre"> 
-        </div>
+        <hr />
+        <h1 style="text-align:center"><b>The Second International Workshop on 
+         <br>    Deep Learning for Pattern Recognition (DLPR2018)</b></h1>
+        
+        <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+        text-align:center">
+         <i>To be held in conjunction with the 24th International Conference on Pattern Recognition ICPR 2018, August 20th,
+                2018. Beijing, China</i>   </p>
+        <img src="DLPR_logo2.jpg" class="img-responsive" alt="Cinque Terre"> 
+        <!-- <img src="ICPR_logo.jpg" class="img-responsive" alt="Cinque Terre">  -->
+
 
         <div class="row">
             <div class="span6 offset2">
@@ -46,7 +46,7 @@
                     <li>
                         <a href="Important Dates.html">Important Dates</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="Invited Speakers.html">Invited Speakers</a>
                     </li>
                     <li>
@@ -55,7 +55,7 @@
                     <!-- <li>
                         <a href="Registration.html">Registration</a>
                     </li> -->
-                    <li class="active">
+                    <li>
                         <a href="Program.html">Program</a>
                     </li>
                     <li>
@@ -68,8 +68,8 @@
 
         <div class="row">
             <div class="span12">
-                    <h2 style="color:darkblue"><span>Workshop Program</span></h2>
-                    <p><span style="font-size: 16px"><span>TBA.&nbsp;</span></span></p>
+                <h2>Invited Speakers</h2>
+                <p>TBA.</p>
             </div>
         </div>
     </div>
