--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
             <div class="span6 offset2">
                 <ul class="nav nav-tabs">
                     <li class="active">
-                        <a href="index.html">Call For Papers</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <!-- <li> <a href="dataset.html">Dataset</a></li> -->
                     <!-- <li><a href="tasks.html">Tasks</a></li> -->
                     <li>
-                        <a href="Organizers.html">Organizers</a>
+                        <a href="Organizers.html">Organization Committee</a>
                     </li>
                     <li>
                         <a href="Important Dates.html">Important Dates</a>
+                    </li>
+                    <li>
+                        <a href="Invited Speakers.html">Invited Speakers</a>
                     </li>
                     <li>
                         <a href="Submission.html">Submission</a>
@@ -57,9 +60,9 @@
                     <li>
                         <a href="Program.html">Program</a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a href="Contact.html">Contact</a>
-                    </li> -->
+                    </li>
                     <br />
                 </ul>
             </div>
@@ -72,8 +75,16 @@
                     <p>
                             Deep Learning, which can be treated as the most significant breakthrough in the past 10 years in the field of pattern recognition and machine learning, has greatly affected the methodology of related fields like computer vision and achieved terrific progress in both academy and industry. It can be seen as a resolution to change the whole pattern recognition system. It achieved an end-to-end pattern recognition, merging the previous steps of pre-processing, feature extraction, classifier design and post-processing. It is expected that the development of deep learning theories and applications would further influence the field of pattern recognition. The major goal of this workshop is to provide a platform for researchers or graduate students around the world to report or exchange their progresses on deep learning for pattern recognition.
                     </p>
-                    <p>The topics of interest include, but are not limited to:</p>
-                            <div style="padding-left: 2em">
+
+                    <h3 style="color:darkblue">Important dates</h3>
+                    <ul class="">
+                        <li>Paper Submissions: <strong>June 1, 2018</strong></li>
+                        <li>Author Notification: <strong>June 30, 2018</strong></li>
+                        <li>Camera ready dealine: <strong>July 15, 2018</strong></li>
+                        <li>Workshop Date: <strong>August 20, 2018</strong></li>
+                    </ul>
+                    <h3 style="color:darkblue">Scope and Topics</h3>
+                    <div style="padding-left: 2em">
                                     <p>
                                             <ur>
                                                     <li><span style="font-size: 16px"><span >Deep learning architectures for pattern recognition</span></span></li>
