--- a/index.html
+++ b/index.html
@@ -70,20 +70,28 @@
 
         <div class="row">
             <div class="span12">
-                    <h2 style="color:darkblue">Call For Papers</h2>
+                    <!-- <h2 style="color:darkblue">Call For Papers</h2> -->
+                    <br>
 
                     <p>
                             Deep Learning, which can be treated as the most significant breakthrough in the past 10 years in the field of pattern recognition and machine learning, has greatly affected the methodology of related fields like computer vision and achieved terrific progress in both academy and industry. It can be seen as a resolution to change the whole pattern recognition system. It achieved an end-to-end pattern recognition, merging the previous steps of pre-processing, feature extraction, classifier design and post-processing. It is expected that the development of deep learning theories and applications would further influence the field of pattern recognition. The major goal of this workshop is to provide a platform for researchers or graduate students around the world to report or exchange their progresses on deep learning for pattern recognition.
                     </p>
 
-                    <h3 style="color:darkblue">Important dates</h3>
+                    <h2>News</h2>
+                    <p>
+                        <ul>
+                            <li>Call for Paper is announced here!</li>
+                        </ul>
+                    </p>
+
+                    <h2 style="color:darkblue">Important dates</h3>
                     <ul class="">
                         <li>Paper Submissions: <strong>June 1, 2018</strong></li>
                         <li>Author Notification: <strong>June 30, 2018</strong></li>
                         <li>Camera ready dealine: <strong>July 15, 2018</strong></li>
                         <li>Workshop Date: <strong>August 20, 2018</strong></li>
                     </ul>
-                    <h3 style="color:darkblue">Scope and Topics</h3>
+                    <h2 style="color:darkblue">Scope and Topics</h3>
                     <div style="padding-left: 2em">
                                     <p>
                                             <ur>
